--- a/restro-pipeline/Jenkinsfile
+++ b/restro-pipeline/Jenkinsfile
@@ -11,6 +11,7 @@ node {
 	}
 	
 	stage('deploy') {
+		sh 'mv target/restro.war target/hotel.war'
 		deploy adapters: [tomcat9(credentialsId: 'c7ba21e9-0018-4029-93aa-fdac97a3c3cb', path: '', url: 'http://13.233.86.137:8080/')], contextPath: null, onFailure: false, war: '**/*.war'
 	}
 
